--- a/index.html
+++ b/index.html
@@ -10,104 +10,51 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <div class="nav-container">
-          <h3 class="company">Excel Agroscience</h3>
-          <div class="nav-btn">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-          </div>
+    <nav>
+      <div class="nav-container">
+        <h3 class="company">Excel Agroscience</h3>
+        <div class="nav-btn">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+      </div>
+
+      <ul class="nav-links">
+        <li><a href="#banner">home</a></li>
+        <li><a href="#skills">services</a></li>
+        <li><a href="#about">about</a></li>
+        <li><a href="#projects">products</a></li>
+        <li><a href="#projects">contact</a></li>
+        <div class="nav-icons">
+          <li>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-google-plus"></i></a>
+          </li>
+        </div>
+      </ul>
+    </nav>
+    <!--  end of nav-->
+    <section class="banner">
+      <header id="banner">
+        <div class="banner-title">
+          <h1 class="banner-text">excel Agroscience</h1>
+          <h3>we supply agricultural inputs across nigeria</h3>
+          <div class="underline"></div>
         </div>
 
-        <ul class="nav-links">
-          <li><a href="#banner">home</a></li>
-          <li><a href="#skills">services</a></li>
-          <li><a href="#about">about</a></li>
-          <li><a href="#projects">products</a></li>
-          <li><a href="#projects">contact</a></li>
-          <div class="nav-icons">
-            <li>
-              <a href="#"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-google-plus"></i></a>
-            </li>
-          </div>
-        </ul>
-      </nav>
-    </header>
-    <!-- nav
-  <nav>
-    <ul>
-      <li><a href="#" class="logo">Web Agency <i class="fa fa-arrow-down"></i></a></li>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Skills</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Work</a></li>
-    </ul>
-  </nav>
-  -->
-
-    <!--  end of nav-->
-
-    <!--banner -->
-    <header id="banner">
-      <div class="banner-title">
-        <h1 class="banner-text">excel Agroscience</h1>
-        <h3>we supply agricultural inputs across nigeria</h3>
-        <div class="underline"></div>
-      </div>
-
-      <a href="#contact" class="btn">contact us</a>
-    </header>
-    <!--  end of banner-->
-    <!--  skills section-->
-    <!--  <section id="skills">
-      <div class="skills-container">
-        <article class="skills-item">
-          <i class="fa fa-code"></i>
-          <h1>Code</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-            sed vero libero sapiente corrupti. Dolorum.
-          </p>
-        </article>
-        <article class="skills-item">
-          <i class="fa fa-file-text-o"></i>
-          <h1>Documented</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-            sed vero libero sapiente corrupti. Dolorum.
-          </p>
-        </article>
-        <article class="skills-item">
-          <i class="fa fa-map-o"></i>
-          <h1>Optimized</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-            sed vero libero sapiente corrupti. Dolorum.
-          </p>
-        </article>
-        <article class="skills-item">
-          <i class="fa fa-desktop"></i>
-          <h1>Retina</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-            sed vero libero sapiente corrupti. Dolorum.
-          </p>
-        </article>
-      </div>
+        <a href="#contact" class="btn">contact us</a>
+      </header>
     </section>
- -->
+    <!--  end of banner-->
     <!-- about section -->
     <section id="about">
       <div class="about-center">
@@ -133,6 +80,7 @@
         </article>
       </div>
     </section>
+    <!--banner -->
     <!--  services section-->
     <section id="services">
       <!--       title-->
@@ -284,7 +232,6 @@
       </div>
     </section>
     <!--     end of projects-->
-
     <section id="contact">
       <!--  title-->
       <div class="title contact-text">
@@ -304,7 +251,7 @@
           </div>
           <div class="item-info">
             <i class="fa fa-envelope"></i>
-            <p>excelagroscience@email.com</p>
+            <p>excel@email.com</p>
           </div>
           <div class="item-info">
             <i class="fa fa-clock-o"></i>
@@ -335,11 +282,9 @@
             />
             <input type="submit" value="Send message" class="btn" />
           </form>
-          >
         </article>
       </div>
     </section>
-
     <!--end of contact form-->
 
     <!--footer section-->
@@ -354,6 +299,7 @@
         <a href="#"><i class="fab fa-google-plus"></i></a>
       </div>
     </footer>
+
     <script src="./script.js"></script>
   </body>
 </html>
