--- a/index.html
+++ b/index.html
@@ -57,15 +57,16 @@
     <!--  end of banner-->
     <!-- about section -->
     <section id="about">
+      <div class="about-text">
+        <h1>about us</h1>
+      </div>
+      <div class="underline"></div>
+
       <div class="about-center">
         <article class="about-image">
           <img src="/images/tomato.jpeg" alt="about image" />
         </article>
         <article class="about-text">
-          <div>
-            <h1>about us</h1>
-          </div>
-          <div class="underline"></div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Recusandae, sit. Illum facere omnis praesentium dicta harum suscipit
@@ -76,7 +77,7 @@
             inventore doloribus vitae. Deserunt cupiditate, fuga aut tempore
             quia officia.
           </p>
-          <a href="#contact" class="btn">get started</a>
+          <div class="bbn"><a href="#contact" class="btn">get started</a></div>
         </article>
       </div>
     </section>
@@ -104,7 +105,6 @@
               ipsa reprehenderit. Cupiditate id, quo expedita illum excepturi
               optio fugit dicta!
             </p>
-            <button type="button">Read More</button>
           </div>
         </article>
         <article class="service-item service-item-white">
@@ -119,7 +119,6 @@
               ipsa reprehenderit. Cupiditate id, quo expedita illum excepturi
               optio fugit dicta!
             </p>
-            <button type="button">Read More</button>
           </div>
         </article>
         <article class="service-item service-item-black">
@@ -134,7 +133,6 @@
               ipsa reprehenderit. Cupiditate id, quo expedita illum excepturi
               optio fugit dicta!
             </p>
-            <button type="button">Read More</button>
           </div>
         </article>
         <article class="service-item service-item-white">
@@ -149,7 +147,6 @@
               ipsa reprehenderit. Cupiditate id, quo expedita illum excepturi
               optio fugit dicta!
             </p>
-            <button type="button">Read More</button>
           </div>
         </article>
       </div>
