--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
       <ul class="nav-links">
         <li><a href="#banner">home</a></li>
-        <li><a href="#skills">services</a></li>
+        <li><a href="#service">services</a></li>
         <li><a href="#about">about</a></li>
         <li><a href="#projects">products</a></li>
-        <li><a href="#projects">contact</a></li>
+        <li><a href="#contact">contact</a></li>
         <div class="nav-icons">
           <li>
             <a href="#"><i class="fab fa-facebook"></i></a>
@@ -83,7 +83,7 @@
     </section>
     <!--banner -->
     <!--  services section-->
-    <section id="services">
+    <section id="service">
       <!--       title-->
       <div class="title">
         <div class="title-text">
